# practice

./: junit.xml  requirements.txt
.github/workflows/: claude-code-review.yml  unit_test.yml
basic_agent_example/: .gitignore
basic_agent_example/models/: schema.py
basic_agent_example/src/: runner.py
basic_agent_example/src/agent/: host_agent.py
basic_agent_example/src/config/: logging_creation.py
basic_agent_example/src/prompts/: system_prompts.py
basic_agent_example/src/tools/: __init__.py
coRAG/: main.py
coRAG/src/agents/: agent.py  orchestrator.py
coRAG/src/config/: init_logging.py
coRAG/src/prompts/: system_prompts.py
coRAG/src/tools/: __init__.py  tools.py
coRAG_agents_sdk/: main.py
coRAG_agents_sdk/src/agents/: __init__.py  agent.py  orchestrator.py
coRAG_agents_sdk/src/config/: __init__.py  init_logging.py
coRAG_agents_sdk/src/models/: models.py
coRAG_agents_sdk/src/prompts/: __init__.py  system_prompts.py
coRAG_agents_sdk/src/tools/: __init__.py  (+1 more)
flight_manager/prompts/: system_prompts.py
flight_manager/workflow/: test2.py  wokrflow_1.py  workflow_react.py
mcp_practice/: jina_mcp_example.py  testing.py
other_stuff/flight_manager/: .gitignore  flight_data.json
other_stuff/restaurant_agent/: runner.py
restaurant_agent/: pyproject.toml  restaurant_database.json
restaurant_agent/models/: schemas.py
restaurant_agent/src/agent/: host_agent.py
restaurant_agent/src/config/: logging_init.py
restaurant_agent/src/prompts/: system_prompt.py
restaurant_agent/src/tools/: database_tool.py  tools.py
tests/: unit_tests.py
(+10 files in other folders)
